<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_reg_no_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_reg_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/hint_reg_no"
                    android:textColorHint="@color/color_accent"
                    android:textColor="#fafafa"/>

            </android.support.design.widget.TextInputLayout>


            <TableLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_dob_textinputlayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/login_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:hint="@string/hint_dob"
                            android:textColor="#fafafa"/>

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/login_select_date"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_event_black_48dp"/>

                </TableRow>

            </TableLayout>

            <com.pnikosis.materialishprogress.ProgressWheel xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:wheel="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_progress_wheel"
                android:layout_width="@dimen/progress_wheel_normal_size"
                android:layout_height="@dimen/progress_wheel_normal_size"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:visibility="gone"
                wheel:matProg_barColor="@color/color_primary"
                wheel:matProg_progressIndeterminate="true" />

            <Button
                android:id="@+id/login_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/button_normal_margin"
                android:background="@drawable/ripple"
                android:text="@string/button_login"
                android:textColor="@color/button_normal_text" />

            <TextView
                android:text="@string/text_disclaimer"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/disclaimer_margin"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center_vertical|center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/disclaimer"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

