<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.harshvardhan.mit_portal.activity.LoginProfileActivity">


    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/card_margin">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/text_reg_no"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|center_horizontal"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:textStyle="bold"
                            android:textColor="@color/text_primary_dark"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:text=""
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/text_primary"
                            android:gravity="center_vertical|center_horizontal"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:id="@+id/login_profile_reg_no"/>

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/text_dob"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical|center_horizontal"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:textStyle="bold"
                            android:textColor="@color/text_primary_dark"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:text=""
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical|center_horizontal"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:textColor="@color/text_primary"
                            android:id="@+id/login_profile_dob"/>

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/login_profile_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/button_normal_margin"
        android:background="@drawable/ripple"
        android:text="@string/button_logout"
        android:textColor="@color/button_normal_text" />


</RelativeLayout>
