<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <android.support.v7.widget.CardView
        android:layout_marginBottom="@dimen/card_margin_bottom_half"
        android:layout_marginTop="@dimen/card_margin_top_half"
        android:layout_width="match_parent"
        android:id="@+id/academic_status_card_current_semester_name"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/card_margin">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/semester_title"
                        android:text=""
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="@dimen/abc_text_size_headline_material"
                        android:textColor="@color/text_primary_dark"
                        android:layout_height="wrap_content"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/divider_height"
                        android:layout_margin="@dimen/divider_margin"
                        android:background="@color/divider_color"
                        android:layout_weight="1"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/text_session"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/text_primary_dark"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text=""
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textColor="@color/text_primary"
                        android:id="@+id/semester_session"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/text_credits_earned"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/text_primary_dark"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text=""
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textColor="@color/text_primary"
                        android:id="@+id/semester_credits_earned"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/text_gpa"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:textColor="@color/text_primary_dark"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text=""
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textColor="@color/text_primary"
                        android:id="@+id/semester_gpa"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>>

</LinearLayout>