<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_marginBottom="@dimen/card_margin_bottom"
        android:layout_width="match_parent"
        android:id="@+id/academic_status_card_current_semester_session"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/card_margin">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/title_semester"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="@dimen/abc_text_size_headline_material"
                        android:textColor="@color/text_primary_dark"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_class_black_48dp"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/divider_height"
                        android:layout_margin="@dimen/divider_margin"
                        android:background="@color/divider_color"
                        android:layout_weight="1"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text=""
                        android:id="@+id/academic_status_current_semester_name"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/text_primary"
                        android:layout_height="wrap_content"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginBottom="@dimen/card_margin_bottom"
        android:layout_width="match_parent"
        android:id="@+id/academic_status_card_current_semester_name"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/card_margin">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/title_session"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="@dimen/abc_text_size_headline_material"
                        android:textColor="@color/text_primary_dark"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_today_black_48dp"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/divider_height"
                        android:layout_margin="@dimen/divider_margin"
                        android:background="@color/divider_color"
                        android:layout_weight="1"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text=""
                        android:id="@+id/academic_status_current_semester_session"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/text_primary"
                        android:layout_height="wrap_content"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginBottom="@dimen/card_margin_bottom"
        android:layout_width="match_parent"
        android:id="@+id/academic_status_card_current_semester_credits"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/card_margin">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/title_credits_earned"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="@dimen/abc_text_size_headline_material"
                        android:textColor="@color/text_primary_dark"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_grade_black_48dp"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/divider_height"
                        android:layout_margin="@dimen/divider_margin"
                        android:background="@color/divider_color"
                        android:layout_weight="1"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text=""
                        android:id="@+id/academic_status_current_semester_credits"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/text_primary"
                        android:layout_height="wrap_content"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginBottom="@dimen/card_margin_bottom"
        android:layout_width="match_parent"
        android:id="@+id/academic_status_card_current_semester_gpa"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/card_margin">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/title_gpa"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="@dimen/abc_text_size_headline_material"
                        android:textColor="@color/text_primary_dark"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@mipmap/ic_code_black_48dp"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/divider_height"
                        android:layout_margin="@dimen/divider_margin"
                        android:background="@color/divider_color"
                        android:layout_weight="1"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text=""
                        android:id="@+id/academic_status_current_semester_gpa"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/text_primary"
                        android:layout_height="wrap_content"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>